feat: game of X