@@ -1,8 +1,16 @@
-ThisBuild / version := "0.1.0-SNAPSHOT"
+import scala.collection.Seq
 
-ThisBuild / scalaVersion := "3.4.2"
+name := "TicTacToe"
 
-lazy val root = (project in file("."))
-  .settings(
-    name := "Tic-tac-toe-game"
-  )
+version := "0.1"
+
+scalaVersion := "3.3.1"
+
+libraryDependencies ++= Seq(
+  "org.scalafx" %% "scalafx" % "20.0.0-R31",
+)
+
+javaOptions ++= Seq(
+  "--module-path", "/path/to/javafx-sdk-17/lib",
+  "--add-modules", "javafx.controls"
+)
